--- a/src/styles/ModalConfirmation.css
+++ b/src/styles/ModalConfirmation.css
@@ -7,6 +7,7 @@
   background-color: aquamarine;
   padding: 20px;
   border: 1px solid rgb(41, 42, 44);
+  color: #000;
 }
 
 .containerTwo .contentBtn {
